unpackaged/main/default/objects/aeon2__EffortGroupAction__c/aeon2__EffortGroupAction__c.object-meta.xml
<CustomObject>
    <label>Effort Group Case Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Effort Group Case Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>