unpackaged/main/default/objects/aeon2__EffortGroupAction__c/fields/aeon2__Adjustable__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Adjustable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjustable</label>
    <type>Checkbox</type>
</CustomField>