unpackaged/main/default/objects/aeon2__EffortGroupAction__c/fields/aeon2__EffortGroup__c.field-meta.xml
<CustomField>
    <fullName>aeon2__EffortGroup__c</fullName>
    <label>Effort Group</label>
    <referenceTo>aeon2__EffortGroup__c</referenceTo>
    <relationshipName>EffortGroupActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>