unpackaged/main/default/objects/aeon2__EffortGroupAction__c/fields/aeon2__Visible__c.field-meta.xml
<CustomField>
    <fullName>aeon2__Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>